sfdx-source/main/default/objects/CIP_Settings__c/CIP_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting would identify the environment/sandbox configurations for Clinical Intake prioritization module</description>
    <label>CIP Settings</label>
</CustomObject>