sfdx-source/main/default/objects/CIP_Settings__c/fields/AuthProviderName__c.field-meta.xml
<CustomField>
    <fullName>AuthProviderName__c</fullName>
    <description>Name of the Auth Provider that will be used for SSOi</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AuthProviderName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>