sfdx-source/main/default/objects/CIP_Settings__c/fields/baseUrl__c.field-meta.xml
<CustomField>
    <fullName>baseUrl__c</fullName>
    <description>Salesforce Base Url</description>
    <encryptionScheme>None</encryptionScheme>
    <label>baseUrl</label>
    <type>Url</type>
</CustomField>