sfdx-source/main/default/objects/CIP_Settings__c/fields/token__c.field-meta.xml
<CustomField>
    <fullName>token__c</fullName>
    <description>Place to store temporary IAM token if needed for testing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>