sfdx-source/main/default/objects/CIP_Settings__c/fields/VistaNoteLineCharacterLimit__c.field-meta.xml
<CustomField>
    <fullName>VistaNoteLineCharacterLimit__c</fullName>
    <label>VistaNoteLineCharacterLimit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>