sfdx-source/main/default/objects/CIP_Settings__c/fields/VitalSearchNumberOfYears__c.field-meta.xml
<CustomField>
    <fullName>VitalSearchNumberOfYears__c</fullName>
    <description>Number of years to go back in time when retrieving patient&apos;s vitals from CPRS.</description>
    <label>VitalSearchNumberOfYears</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>